--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "3.5",
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.1",
+    "rails-erb-loader": "^5.4.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "redux": "^4.0.0",
