--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "rails-erb-loader": "^5.4.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
   },
