--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "babel-preset-react": "^6.24.1",
+    "fuse.js": "^3.2.0",
     "prop-types": "^15.6.1",
     "rails-erb-loader": "^5.4.2",
     "react": "^16.3.2",
